# python-test

./: README.MD  README.md  bom.json  pyproject.toml  sbom-flag.json  sbom-new.json  sbom.json
.github/workflows/: generate_sbom.yaml
