[tool.poetry]
name = "python-test"
version = "0.1.0"
description = ""
authors = ["Ajmal Kottilingal <ajmal.kottilingal@transferwise.com>"]
readme = "README.md"
packages = [{include = "python_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
